--- a/styles/styles.css
+++ b/styles/styles.css
@@ -98,8 +98,8 @@ body {
 
 .aside {
   width: 100%;
-  border-top: solid 3px var(--secondary-color);
   display: flex;
+  align-self: center;
   justify-content: center;
 }
 
@@ -122,7 +122,7 @@ body {
   display: none;
 }
 
-.aside .aside-description p:nth-child(1) {
+.aside .aside-description p:nth-child(2) {
   font-weight: bold;
   font-size: 1.3em;
 }
@@ -166,13 +166,13 @@ body {
   }
 
   .aside-description {
-    height: 37rem;
-    background-repeat: no-repeat;
+    height: 34rem;
   }
 
   .aside-description-img {
     display: block;
   }
+
   .aside .aside-description p:nth-child(2) {
     font-weight: bold;
     font-size: 1.3em;
